# prosody

./: README.md  data.vala  expression.vala  lib.vala  loader.vala  meson.build  parser.vala  writers.vala
c/: value_utils.c
misc/: AppStream.vala  I18nUtil.vala  diff.vala  file.vala  http.vala  i18n.vala  json.vala  mimeinfo.vala  test.vala  tsv.vala  xml.vala
